--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -15,5 +15,8 @@ jobs:
     - name: OPA check strict
       run: opa check --strict test/
 
-    - name: Check formatting
-      run: opa fmt --diff --fail test/
+    - name: Setup Regal
+      uses: StyraInc/setup-regal@v0.2.0
+      with:
+        version: latest
+    - run: regal lint --format github test/
