--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -15,6 +15,9 @@ jobs:
     - name: OPA check strict
       run: opa check --strict test/
 
+    - name: OPA test
+      run: opa test --coverage --threshold 100 test/
+
     - name: Setup Regal
       uses: StyraInc/setup-regal@v0.2.0
       with:
